# learnopengl

./: .gitignore  debug-minimal.bat  learnopengl.sln  learnopengl.vcxproj  learnopengl.vcxproj.filters  main_camera.cpp  main_glm.cpp  main_glsl.cpp  main_more3d.cpp  main_transform.cpp  main_triangle.cpp  shader.h
Coding/: CMakeLists.txt  glad.c  main.cpp  main_camera.cpp  main_moreattr.cpp  main_texture.cpp
Coding/include/glad/: glad.h
Coding/include/glm/detail/: dummy.cpp
